--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #858AE3;
     color:#2C0735;
+    display: flex;
+    min-height: 100vh;
 }
 
 main {
@@ -56,4 +58,21 @@ input {
 
 #counter {
     font-size: 5em;
+}
+
+aside {
+    background-color: #7177DF;
+    width: min(5%, 128px);
+    background-image:url("scroll-texture.png");
+    background-size: 100%;
+    animation: scrollImage var(--scroll-speed) linear infinite;
+}
+
+@keyframes scrollImage {
+    from {
+        background-position: 0 100%;
+    }
+    to {
+        background-position: 0 0;
+    }
 }
